---------------------------------------------------------------------------------------------------
Version: 0.3.18
Date: 2025-06-06
  Changes:
    - Changed location of high purity silicon in tech tree
    - Changed recipes for cargo landing pad, space platform and space foundation
  Bugfixes:
    - Fixed crystallizer animation speed
---------------------------------------------------------------------------------------------------
Version: 0.3.17
Date: 2025-05-30
  Features:
    - Added potassium casting
    - Added crushed and enriched stibnite
    - Added crushed and enriched holmium
  Changes:
    - Changed holmium processing recipes
    - Smelting many metals is now not possible any more in crystallizer
    - Changed order of some icons
    - Some changes in tech tree
    - Some recipes when enriching from crushed recoures yielded a small amount of an other ore. Now that ore is always in its crushed form.
    - Renamed mineral water pumpjack prototype (All of your mineral pumpjacks will be deleted when updating)
    - Hafnium and Rhenium alloys are processed in arcfurnace
  Bugfixes:
    - Fixed some technology requirements for AAI Containers
    - Fixed some technology icons
    - Fixed tungsten plate and tungsten steel smelting recipe chains
    - Fixed recipe casting stainless steel gear wheel
    - Fixed requirement of light emitting diode for tier 2 modules
    - Fixed assembling machines required for crafting tier 2 and tier 3 modules
    - Fixed mineral water and iodine brine fluids icons were not showing up selecting them as train stop names
    - Fixed molten indium from lava recipe
  Balancing:
    - Belt immunity equipment is now unlocked earlier
    - Rebalanced crystallizer
---------------------------------------------------------------------------------------------------
Version: 0.3.16
Date: 2025-05-23
  Changes:
    - Updated ja locale thanks to snow note
    - Increased stack size of stack inserters