@@ -1475,9 +1475,6 @@ sp-femto-navigator=Femto navigator
 sp-fermium-condensate=Fermium condensate
 sp-ferrite=Ferrite
 sp-ferrite-with-cobalt=Ferrite with cobalt
-sp-ferrite-with-copper=Ferrite with copper
-sp-ferrite-with-nickel=Ferrite with nickel
-sp-ferrite-with-zinc=Ferrite with zinc
 sp-filter=Filter
 sp-flange=Flange
 sp-fluorine-from-acrovoid=Fluorine from acrovoid
