@@ -1447,9 +1447,6 @@ sp-femto-navigator=フェムトナビゲーター
 sp-fermium-condensate=フェルミウム凝縮物
 sp-ferrite=フェライト
 sp-ferrite-with-cobalt=コバルト入りフェライト
-sp-ferrite-with-copper=銅入りフェライト
-sp-ferrite-with-nickel=ニッケル入りフェライト
-sp-ferrite-with-zinc=亜鉛入りフェライト
 sp-filter=ろ過装置
 sp-flange=フランジ
 sp-fluorine-from-acrovoid=フッ素(アクロボイド)
