@@ -1012,9 +1012,6 @@ sp-femto-navigator=Nawigator femto
 sp-fermium-condensate=Kondensat fermowy
 sp-ferrite=Ferryt
 sp-ferrite-with-cobalt=Ferryt z kobaltem
-sp-ferrite-with-copper=Ferryt z miedzią
-sp-ferrite-with-nickel=Ferryt z niklem
-sp-ferrite-with-zinc=Ferryt z cynkiem
 sp-filter=Filtr
 sp-flange=Kołnierz
 sp-fluorine-from-acrovoid=Fluor z akropustki
