@@ -1150,9 +1150,6 @@ sp-femto-navigator=飞秒导航器
 sp-fermium-condensate=镄冷凝物
 sp-ferrite=铁氧体
 sp-ferrite-with-cobalt=含钴铁氧体
-sp-ferrite-with-copper=含铜铁氧体
-sp-ferrite-with-nickel=含镍铁氧体
-sp-ferrite-with-zinc=含锌铁氧体
 sp-filter=过滤器
 sp-flange=法兰
 sp-fluorine-from-acrovoid=顶空体制氟
