@@ -812,44 +812,6 @@ data:extend({
   },
   {
     type = "recipe",
-    name = "sp-ferrite-with-nickel",  -- #ForRegEx# - recipe
-    icons = util.icon.overlay_small_icon("__Spaghetorio__/graphics/icons/ferrite.png", 64,
-                                         "__Spaghetorio__/graphics/icons/nickel-ingot.png", 64),
-    hide_from_player_crafting = true,
-    subgroup = "sp-alloy",
-    category = "sp-intermediate-smelting",
-    enabled = false,
-    allow_productivity = true,
-    energy_required = 8,
-    ingredients = {
-      {type = "item", name = "iron-plate", amount = 5},
-      {type = "item", name = "sp-nickel-ingot", amount = 1},
-    },
-    results = {
-      {type = "item", name = "sp-ferrite", amount = 4}
-    }
-  },
-  {
-    type = "recipe",
-    name = "sp-ferrite-with-zinc",  -- #ForRegEx# - recipe
-    icons = util.icon.overlay_small_icon("__Spaghetorio__/graphics/icons/ferrite.png", 64,
-                                         "__Spaghetorio__/graphics/icons/zinc-plate.png", 64),
-    hide_from_player_crafting = true,
-    subgroup = "sp-alloy",
-    category = "sp-intermediate-smelting",
-    enabled = false,
-    allow_productivity = true,
-    energy_required = 8,
-    ingredients = {
-      {type = "item", name = "iron-plate", amount = 5},
-      {type = "item", name = "sp-zinc-plate", amount = 1},
-    },
-    results = {
-      {type = "item", name = "sp-ferrite", amount = 4}
-    }
-  },
-  {
-    type = "recipe",
     name = "sp-ferrite-with-cobalt",  -- #ForRegEx# - recipe
     icons = util.icon.overlay_small_icon("__Spaghetorio__/graphics/icons/ferrite.png", 64,
                                          "__Spaghetorio__/graphics/icons/cobalt-billet.png", 64),
@@ -862,25 +824,6 @@ data:extend({
     ingredients = {
       {type = "item", name = "iron-plate", amount = 5},
       {type = "item", name = "sp-cobalt-billet", amount = 1},
-    },
-    results = {
-      {type = "item", name = "sp-ferrite", amount = 4}
-    }
-  },
-  {
-    type = "recipe",
-    name = "sp-ferrite-with-copper",  -- #ForRegEx# - recipe
-    icons = util.icon.overlay_small_icon("__Spaghetorio__/graphics/icons/ferrite.png", 64,
-                                         "__base__/graphics/icons/copper-plate.png", 64),
-    hide_from_player_crafting = true,
-    subgroup = "sp-alloy",
-    category = "sp-intermediate-smelting",
-    enabled = false,
-    allow_productivity = true,
-    energy_required = 10,
-    ingredients = {
-      {type = "item", name = "iron-plate", amount = 5},
-      {type = "item", name = "copper-plate", amount = 1},
     },
     results = {
       {type = "item", name = "sp-ferrite", amount = 4}
